# flydb

./: .gitignore  CNAME  Cargo.toml  readme.md
.github/workflows/: build-binary.yml  test.yml
src/: handle_client.rs  lib.rs  main.rs  parse_request.rs
src/storage/: encrypted_file.rs  file.rs  in_memory.rs  mod.rs
