[package]
name = "flydb"
version = "0.1.0"
authors = ["Zach Silveira <zackify@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
